# PSProject

./: .gitignore  BackendSchema.swift  HOMEBREW_PATHS.md  KIVY_LIBRARY_GUIDELINES.md  Package.resolved  Package.swift  README.md  backend-schema.json  generate_formula.py  pyproject.toml  setup.py
.claude/agents/: psproject.agent.md
.github/workflows/: homebrew.yml  python-publish.yml  swift.yml  uv-python-versions.yml
.swiftpm/xcode/xcshareddata/xcschemes/: PSProject.xcscheme
Backends/: Package.swift
Backends/Sources/Backends/: BackendProtocol.swift  Backends.swift  Context.swift
Backends/Sources/Backends/YamlBackend/: YamlBackend.swift
Backends/Sources/Backends/backends/: Kivy3Launcher.swift  KivyLauncher.swift  PyFrameworkBackend.swift  PySwiftUI.swift  SDL2Backend.swift  SDL3Backend.swift
MobilePlatformSupport/: EXAMPLES.md  Package.swift  README.md  SUMMARY.md  mobile-wheels-1000-2025-11-19-154840.md  mobile-wheels-2000-results.txt  mobile-wheels-50-2025-11-19-154617.md  mobile-wheels-results.md
MobilePlatformSupport/Sources/DependencyChecker/: main.swift
MobilePlatformSupport/Sources/MobilePlatformSupport/: MobilePlatformSupport.swift
MobilePlatformSupport/Sources/MobileWheelsChecker/: main.swift
PSTools/: Package.swift
PSTools/Sources/PSTools/: IphoneosWheelSources.swift  Tools.swift  Validation.swift  Which.swift
PSTools/Sources/PSTools/extensions/: Array.swift  Path.swift  Process.swift
PyProjectToml/Sources/PyProjectToml/: NewToml.swift
PyProjectToml/Sources/PyProjectToml/PyProject+Tool/: Tool+PSProject.swift
PyProjectToml/Sources/PyProjectToml/PyProject+Tool/PSProject/ExtraTarget/: ExtraTarget.swift
SetVersion/: Package.swift
SetVersion/Plugins/: SetVersion.swift
Sources/: PSProject.swift
Sources/GradleProjectBuilder/: GradleBuildFiles.swift  GradleProjectBuilder.swift
Sources/PSProject/: AbstractInfo.swift  HostPython.swift  Init.swift  PSProject.swift  Update+Project.swift  Update.swift  Version.swift  Wheels.swift
Sources/PSProject/Create/: Create.swift  Gradle.swift  Xcode.swift
Sources/PSProject/Template/: Template+Package.swift  Template.swift
Sources/PSProject/Wheels/: Cache.swift  Download.swift
Sources/XcodeProjectBuilder/: MainFiles.swift  PyProjectToml+Ext.swift  SettingPresets.swift  XcodeProjectBuilder.swift
Sources/XcodeProjectBuilder/Project/: Project.swift
Sources/XcodeProjectBuilder/ProjectTarget/: AppExtensionTarget.swift  BuildScripts.swift  ProjectTarget+Scripts.swift  ProjectTarget.swift
TemplateGenerator/: Package.swift
TemplateGenerator/Sources/TemplateGenerator/: AppPackageTemplate.swift  PackageTemplate.swift
VaporSimpleServer/: Package.swift  pyproject.toml  setup.py  vapor-simple-server.md
VaporSimpleServer/Sources/VaporSimpleServer/: Entrypoint.swift
VaporSimpleServer/Sources/VaporSimpleServerCore/: HTMLRenderer.swift  Routes.swift  WheelScanner.swift
plans/: elementaryui-components.md  extra-targets.md
